Fix image position on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,12 @@ div {
 }
 
 .tile {
+  background: no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+
   position: relative;
 }
 
